Fix jumping head expression

--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@
 .expression {
     font-size: 2em;
     text-align: center;
-    height: 50px;
+    line-height: 50px;
 }
 
 .expression.show .sum,
